--- a/index.ipynb
+++ b/index.ipynb
@@ -407,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = foliu"
+    "la_boca_marker = folium.Marker([-34.])"
    ]
   },
   {
